Replace deprecated Integer(int)